# msTest

./: .gitignore  .gitmodules  Brightness.qml  CMakeLists.txt  CMakeLists.txt.user.4007484  Colors.qml  End.qml  Start.qml  Touch.qml  backend.cpp  backend.h  black.qml  blue.qml  brightness.qml  client.cpp  client.h  comunication.cpp  comunication.h  end.qml  file  getIpBoard.sh  green.qml  hotplugwatcher.h  keyboard.qml  main.cpp  main.qml  off.qml  qdevicewatcher.cpp  qdevicewatcher_linux.cpp  qml.qrc  red.qml  start.qml  startPicocomScript.sh  touch.qml  usb.qml  usbwatcher.cpp  usbwatcher.h  white.qml
scripts/: configureQtCreator.sh  getIp.sh  startPicocom.sh  startPicocomScript.sh
